--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,21 @@
 {
   "name": "nimbus-edu",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "dependencies": {
-    "angular": "^1.4.0",
-    "angular-animate": "^1.4.0",
-    "angular-cookies": "^1.4.0",
-    "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
-    "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular": "^1.7.3",
+    "angular-animate": "^1.7.3",
+    "angular-cookies": "^1.7.3",
+    "angular-resource": "^1.7.3",
+    "angular-route": "^1.7.3",
+    "angular-sanitize": "^1.7.3",
+    "angular-touch": "^1.7.3",
+    "jquery": "^3.3.1",
+    "ngTagsInput": "https://github.com/mbenford/ngTagsInput.git#^3.2.0",
+    "angular-typeahead": "^1.0.2",
+    "moment": "^2.22.2",
+    "angular-chart": "^0.5.0",
+    "ngstorage": "^0.3.11",
+    "papaparse": "^4.6.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
