--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,11 @@
     "ngTagsInput": "https://github.com/mbenford/ngTagsInput.git#^3.2.0",
     "angular-typeahead": "^1.0.2",
     "moment": "^2.22.2",
-    "angular-chart": "^0.5.0",
     "ngstorage": "^0.3.11",
     "papaparse": "^4.6.0",
     "angular-chart.js": "^1.1.1",
-    "angular-linq": "^1.0.2"
+    "angular-linq": "^1.0.2",
+    "pusher-angular": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.3",
